--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["crates/adder", "crates/add-one", "crates/add-two"]
+members = ["crates/adder", "crates/add-one", "crates/add-two", "crates/json-core", "crates/find-text"]
 resolver = "2"
